dev/backend-ds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: jain-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: adarshjain428/picklebackend:v1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: jain-app
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5000
