dev/frontend-ds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: jain-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: adarshjain428/picklefrontend:v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: jain-app
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
