dev/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jain-routing
  namespace: jain-app
spec:
  hosts:
    - "*"
  gateways:
    - jain-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: backend
            port:
              number: 80

    - match:
        - uri:
            prefix: /uploads
      route:
        - destination:
            host: backend
            port:
              number: 80

    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend
            port:
              number: 80
